[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/tilemap/tiles/crate/Crate.png" type="Texture" id=1]
[ext_resource path="res://scripts/tilemap/tiles/crate/Crate.gd" type="Script" id=2]
[ext_resource path="res://scripts/entity/HurtBox.gd" type="Script" id=3]
[ext_resource path="res://scripts/tilemap/tiles/crate/Crate Inventory.gd" type="Script" id=4]
[ext_resource path="res://assets/tilemap/tiles/crate/Crate_Inventory_bg.png" type="Texture" id=5]
[ext_resource path="res://assets/tilemap/tiles/crate/crate_inventory_theme.tres" type="Theme" id=6]
[ext_resource path="res://scripts/GUI/Slot Inventory.gd" type="Script" id=7]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -8.1285, 6.39116, 7.86659, 6.46132, 7.90166, -1.99223, -8.16357, -1.99223 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.50822
height = 9.90912

[sub_resource type="Animation" id=3]
resource_name = "close_inv"
tracks/0/type = "value"
tracks/0/path = NodePath("Crate_sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 64, 64, 64, 64 ), Rect2( 0, 64, 64, 64 ), Rect2( 0, 0, 64, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crate_sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Crate_sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 64, 64 ), Rect2( 64, 0, 64, 64 ), Rect2( 128, 0, 64, 64 ), Rect2( 0, 0, 64, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crate_sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Crate_sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 64, 64, 64 ), Rect2( 64, 64, 64, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Crate_sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 7.25
height = 8.625

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="StyleBoxTexture" id=8]

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="StyleBoxTexture" id=10]

[sub_resource type="StyleBoxTexture" id=11]

[sub_resource type="StyleBoxTexture" id=12]

[node name="Crate" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1.5026 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Crate_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hit"
anims/close_inv = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/open_inv = SubResource( 5 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
input_pickable = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 1.1875 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Scale inv" type="Node2D" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 0.5, 0.5 )

[node name="Crate Inventory" type="Control" parent="Scale inv"]
material = SubResource( 7 )
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
mouse_filter = 2
theme = ExtResource( 6 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.075
anchor_top = 0.24
anchor_right = 0.925
anchor_bottom = 0.96
margin_left = -9.53674e-07
margin_right = -1.52588e-05
margin_bottom = -1.52588e-05
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot1" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.19
anchor_top = 0.335
anchor_right = 0.3
anchor_bottom = 0.445
margin_left = -3.8147e-06
margin_right = -3.8147e-06
margin_bottom = -7.62939e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot2" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.315
anchor_top = 0.335
anchor_right = 0.425
anchor_bottom = 0.445
margin_right = -1.52588e-05
margin_bottom = -7.62939e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot3" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.445
anchor_top = 0.335
anchor_right = 0.555
anchor_bottom = 0.445
margin_right = 7.62939e-06
margin_bottom = -7.62939e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot4" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.575
anchor_top = 0.335
anchor_right = 0.685
anchor_bottom = 0.445
margin_right = -1.52588e-05
margin_bottom = -7.62939e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot5" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.7
anchor_top = 0.335
anchor_right = 0.81
anchor_bottom = 0.445
margin_left = -1.52588e-05
margin_right = -3.05176e-05
margin_bottom = -7.62939e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot6" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.19
anchor_top = 0.475
anchor_right = 0.3
anchor_bottom = 0.585
margin_left = -3.8147e-06
margin_right = -7.62939e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot7" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.315
anchor_top = 0.475
anchor_right = 0.425
anchor_bottom = 0.585
margin_right = -7.62939e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot8" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.445
anchor_top = 0.475
anchor_right = 0.555
anchor_bottom = 0.585
margin_right = 7.62939e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot9" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.575
anchor_top = 0.475
anchor_right = 0.685
anchor_bottom = 0.585
margin_right = -1.52588e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot10" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.7
anchor_top = 0.475
anchor_right = 0.81
anchor_bottom = 0.585
margin_left = -1.52588e-05
margin_right = -3.05176e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot11" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.19
anchor_top = 0.62
anchor_right = 0.3
anchor_bottom = 0.73
margin_left = -3.8147e-06
margin_top = 7.62939e-06
margin_right = -3.8147e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot12" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.315
anchor_top = 0.62
anchor_right = 0.425
anchor_bottom = 0.73
margin_top = 7.62939e-06
margin_right = -1.52588e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot13" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.445
anchor_top = 0.62
anchor_right = 0.555
anchor_bottom = 0.73
margin_top = 7.62939e-06
margin_right = 7.62939e-06
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot14" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.575
anchor_top = 0.62
anchor_right = 0.685
anchor_bottom = 0.73
margin_top = 7.62939e-06
margin_right = -1.52588e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot15" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.7
anchor_top = 0.62
anchor_right = 0.81
anchor_bottom = 0.73
margin_left = -1.52588e-05
margin_top = 7.62939e-06
margin_right = -3.05176e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot16" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.19
anchor_top = 0.76
anchor_right = 0.3
anchor_bottom = 0.87
margin_left = -3.8147e-06
margin_top = -1.52588e-05
margin_right = -3.8147e-06
margin_bottom = -1.52588e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot17" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.315
anchor_top = 0.76
anchor_right = 0.425
anchor_bottom = 0.87
margin_top = -1.52588e-05
margin_right = -1.52588e-05
margin_bottom = -1.52588e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot18" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.445
anchor_top = 0.76
anchor_right = 0.555
anchor_bottom = 0.87
margin_top = -1.52588e-05
margin_right = 7.62939e-06
margin_bottom = -1.52588e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot19" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.575
anchor_top = 0.76
anchor_right = 0.685
anchor_bottom = 0.87
margin_top = -1.52588e-05
margin_bottom = -1.52588e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot20" type="Button" parent="Scale inv/Crate Inventory"]
use_parent_material = true
anchor_left = 0.7
anchor_top = 0.76
anchor_right = 0.81
anchor_bottom = 0.87
margin_left = -1.52588e-05
margin_top = -1.52588e-05
margin_right = -3.05176e-05
margin_bottom = -1.52588e-05
focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="Scale inv/Crate Inventory"]

[node name="Open_crate" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -7.0
margin_right = 8.0
margin_bottom = 7.0
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Regen_timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="Open_crate" to="." method="_on_Open_crate_pressed"]
[connection signal="timeout" from="Regen_timer" to="." method="_on_Regen_timer_timeout"]
